:ant: add front-end framework, fix UI bug on mobile browser

--- a/css/style.css
+++ b/css/style.css
@@ -1,151 +1,159 @@
 @font-face {
-    font-family: 'Material Icons';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Material Icons'), local('MaterialIcons-Regular'), url(../fonts/material-design-icons/1.woff2) format('woff2');
+	font-family: 'Material Icons';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Material Icons'), local('MaterialIcons-Regular'), url(../fonts/material-design-icons/1.woff2) format('woff2');
 }
 
 @font-face {
-    font-family: 'Abel';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Abel'), local('Abel-Regular'), url(../fonts/material-design-icons/2.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+	font-family: 'Abel';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Abel'), local('Abel-Regular'), url(../fonts/material-design-icons/2.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
 .material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    line-height: 1;
-    letter-spacing: normal;
-    text-transform: none;
-    display: inline-block;
-    word-wrap: normal;
-    -webkit-font-feature-settings: 'liga';
-    -webkit-font-smoothing: antialiased;
+	font-family: 'Material Icons';
+	font-weight: normal;
+	font-style: normal;
+	font-size: 24px;
+	line-height: 1;
+	letter-spacing: normal;
+	text-transform: none;
+	display: inline-block;
+	word-wrap: normal;
+	-webkit-font-feature-settings: 'liga';
+	-webkit-font-smoothing: antialiased;
 }
 
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    background-color: #FAFAFA!important;
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+	background-color: #FAFAFA !important;
+	font-family: 'Abel';
 }
 
 main {
-    display: flex;
-    flex: 1 0 auto;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1rem!important;
-    margin-bottom: 1rem!important;
+	display: flex;
+	flex: 1 0 auto;
+	/* align-items: center; */
+	/* justify-content: center; */
+	margin-top: 1rem !important;
+	margin-bottom: 1rem !important;
+	overflow: hidden;
 }
 
-#canvas-container {
-    border: 2px solid black;
+#app-container {
+	position: relative;
 }
 
 canvas {
-    /*border: 20px solid black;*/
-    /*height: 100%;*/
-    width: 100%;
-    cursor: crosshair;
+	/*height: 100%;*/
+	/* width: 100%; */
+	cursor: crosshair;
 }
-
-#canvas {
-    /* background-color: white; */
-}
-
 
 red {
-    color: rgb(244, 67, 54);
+	color: rgb(244, 67, 54);
 }
 
 pink {
-    color: rgb(233, 30, 99);
+	color: rgb(233, 30, 99);
 }
 
 purple {
-    color: rgb(156, 39, 176);
+	color: rgb(156, 39, 176);
 }
 
 indigo {
-    color: rgb(63, 81, 181);
+	color: rgb(63, 81, 181);
 }
 
 aqua, blue {
-    color: rgb(33, 150, 243);
+	color: rgb(33, 150, 243);
 }
 
 cyan {
-    color: rgb(0, 188, 212);
+	color: rgb(0, 188, 212);
 }
 
 teal {
-    color: rgb(0, 150, 136);
+	color: rgb(0, 150, 136);
 }
 
 green {
-    color: rgb(76, 175, 80);
+	color: rgb(76, 175, 80);
 }
 
 lime {
-    color: rgb(205, 220, 57);
+	color: rgb(205, 220, 57);
 }
 
 yellow {
-    color: rgb(255, 235, 59);
+	color: rgb(255, 235, 59);
 }
 
 amber {
-    color: rgb(255, 193, 7);
+	color: rgb(255, 193, 7);
 }
 
 orange {
-    color: rgb(255, 152, 0);
+	color: rgb(255, 152, 0);
 }
 
 brown {
-    color: rgb(121, 85, 72);
+	color: rgb(121, 85, 72);
 }
 
 grey {
-    color: rgb(158, 158, 158);
+	color: rgb(158, 158, 158);
 }
 
 black {
-    background-color: black;
+	background-color: black;
 }
 
 polygon:hover {
-    /*color: rgb(121, 85, 72);*/
+	/*color: rgb(121, 85, 72);*/
 }
 
 region:hover {
-    /*color: rgb(76, 175, 80);*/
+	/*color: rgb(76, 175, 80);*/
 }
 
 ring {
-    transition: 0.5s;
+	transition: 0.5s;
 }
 
 ring:hover {
-    color: rgb(0, 150, 136);
-    transition: 0.5s;
+	color: rgb(0, 150, 136);
+	transition: 0.5s;
 }
 
 point2d {
-    transition: 0.5s;
+	transition: 0.5s;
 }
 
 point2d:hover {
-    color: rgb(233, 30, 99);
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-    transition: 0.5s;
+	color: rgb(233, 30, 99);
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+	transition: 0.5s;
 }
 
 shadow {
-    text-shadow: 2.5px 1px rgba(0, 0, 0, 0.15);
+	text-shadow: 2.5px 1px rgba(0, 0, 0, 0.15);
+}
+
+#canvas, video {
+	border: 1px solid black;
+}
+
+video {
+	width: 100% !important;
+}
+
+.wide-container {
+	width: 95%;
 }
